@@ -1,5 +1,15 @@
 2019-03-08  Robin Morisset  <rmorisset@apple.com>
 
+        TypeLocation can be shrunk by 8 bytes
+        https://bugs.webkit.org/show_bug.cgi?id=195483
+
+        Reviewed by Mark Lam.
+
+        * bytecode/TypeLocation.h:
+        (JSC::TypeLocation::TypeLocation):
+
+2019-03-08  Robin Morisset  <rmorisset@apple.com>
+
         GetByIdStatus can be shrunk by 16 bytes
         https://bugs.webkit.org/show_bug.cgi?id=195480
 
